# vision-grounded-automation

./: .env.example  .gitignore  README.md  build_docker.sh  build_exe.py  install.ps1  pyproject.toml  temp_cv.txt  temp_paste.txt  test_vk.py
src/: config.py  main.py
src/automation/: api_client.py  control.py  desktop.py  notepad.py  window.py
src/core/: exceptions.py  key_manager.py  logger.py  retry.py  settings.py  singleton.py
src/vision/: annotator.py  grounding.py  prompts.py  screenshot.py
src/watcher/: __init__.py  focus.py
tests/: conftest.py  test_api_client.py  test_control.py  test_desktop.py  test_focus_watcher.py  test_grounding.py  test_key_manager.py  test_logger.py  test_main_e2e.py  test_notepad.py  test_retry.py  test_settings.py  test_singleton.py  test_window.py
