[project]
name = "desktop-automation"
version = "0.1.0"
description = "Vision-Based Desktop Automation with Dynamic Icon Grounding"
requires-python = ">=3.12"
dependencies = [
    "mss>=9.0.0",
    "pyautogui>=0.9.54",
    "pywinctl>=0.4",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
desktop-automation = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
