[project]
name = "desktop-automation"
version = "0.1.0"
description = "Vision-Based Desktop Automation with Dynamic Icon Grounding"
requires-python = ">=3.12"
dependencies = [
    "botcity-framework-core>=1.1.3",
    "google-genai>=1.0.0",
    "mss>=9.0.0",
    "Pillow>=10.0.0",
    "psutil>=5.9.8,<6.0",
    "pywin32>=311",
    "pywinctl>=0.4",
    "python-dotenv>=1.0.0",
    "pyperclip>=1.8.0",
    "requests>=2.31.0",
    "pywinauto>=0.6.9",
    "opencv-python>=4.13.0.92",
    "numpy>=2.4.4",
]

[project.scripts]
desktop-automation = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.4.0",
    "pyinstaller>=6.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
